--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -57,17 +57,14 @@
   border-radius: 50%;
 }
 .style-switcher .color-1{
-  background: #ec1839;
+  background: #e9530e;
 }
 .style-switcher .color-2{
-  background: #fa5b0f;
+  background: #7a55e0;
 }
 .style-switcher .color-3{
   background: #37b182;
 }
 .style-switcher .color-4{
   background: #1854b4;
-}
-.style-switcher .color-5{
-  background: #f021b2;
 }
